// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WSelect > renders properly 1`] = `
<div
  class="v-select vs--single vs--unsearchable language-selector"
  dir="auto"
>
  
  
  <div
    aria-expanded="false"
    aria-label="Search for option"
    aria-owns="vs1__listbox"
    class="vs__dropdown-toggle"
    id="vs1__combobox"
    role="combobox"
  >
    <div
      class="vs__selected-options"
    >
      
      
      <span
        class="vs__selected"
      >
        <!--v-if-->
         English
      </span>
      
      
      
      <input
        aria-autocomplete="list"
        aria-controls="vs1__listbox"
        aria-labelledby="vs1__combobox"
        autocomplete="off"
        class="vs__search"
        readonly=""
        type="search"
        value=""
      />
      
    </div>
    <div
      class="vs__actions"
    >
      <button
        aria-label="Clear Selected"
        class="vs__clear"
        style="display: none;"
        title="Clear Selected"
        type="button"
      >
        <svg
          height="10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.895455 5l2.842897-2.842898c.348864-.348863.348864-.914488 0-1.263636L9.106534.261648c-.348864-.348864-.914489-.348864-1.263636 0L5 3.104545 2.157102.261648c-.348863-.348864-.914488-.348864-1.263636 0L.261648.893466c-.348864.348864-.348864.914489 0 1.263636L3.104545 5 .261648 7.842898c-.348864.348863-.348864.914488 0 1.263636l.631818.631818c.348864.348864.914773.348864 1.263636 0L5 6.895455l2.842898 2.842897c.348863.348864.914772.348864 1.263636 0l.631818-.631818c.348864-.348864.348864-.914489 0-1.263636L6.895455 5z"
          />
        </svg>
      </button>
      
      <svg
        class="vs__open-indicator"
        height="10"
        role="presentation"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.211364 7.59931l4.48338-4.867229c.407008-.441854.407008-1.158247 0-1.60046l-.73712-.80023c-.407008-.441854-1.066904-.441854-1.474243 0L7 5.198617 2.51662.33139c-.407008-.441853-1.066904-.441853-1.474243 0l-.737121.80023c-.407008.441854-.407008 1.158248 0 1.600461l4.48338 4.867228L7 10l2.211364-2.40069z"
        />
      </svg>
      
      
      <div
        class="vs__spinner"
        style="display: none;"
      >
        Loading...
      </div>
      
    </div>
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="dropdown"
    persisted="false"
  >
    <ul
      id="vs1__listbox"
      role="listbox"
      style="display: none; visibility: hidden;"
    />
  </transition-stub>
  
  
</div>
`;

exports[`WSelect > renders properly an icon when provided 1`] = `
<div
  class="v-select vs--single vs--unsearchable language-selector"
  dir="auto"
>
  
  
  <div
    aria-expanded="false"
    aria-label="Search for option"
    aria-owns="vs2__listbox"
    class="vs__dropdown-toggle"
    id="vs2__combobox"
    role="combobox"
  >
    <div
      class="vs__selected-options"
    >
      
      
      <span
        class="vs__selected"
      >
        <svg
          class="dropdown-items"
          fill="none"
          height="13"
          viewBox="0 0 12 13"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.17 6.39 5.89 9.44.61 12.48V.29l5.28 3.05z"
            fill="#00E2ED"
          />
        </svg>
         English
      </span>
      
      
      
      <input
        aria-autocomplete="list"
        aria-controls="vs2__listbox"
        aria-labelledby="vs2__combobox"
        autocomplete="off"
        class="vs__search"
        readonly=""
        type="search"
        value=""
      />
      
    </div>
    <div
      class="vs__actions"
    >
      <button
        aria-label="Clear Selected"
        class="vs__clear"
        style="display: none;"
        title="Clear Selected"
        type="button"
      >
        <svg
          height="10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.895455 5l2.842897-2.842898c.348864-.348863.348864-.914488 0-1.263636L9.106534.261648c-.348864-.348864-.914489-.348864-1.263636 0L5 3.104545 2.157102.261648c-.348863-.348864-.914488-.348864-1.263636 0L.261648.893466c-.348864.348864-.348864.914489 0 1.263636L3.104545 5 .261648 7.842898c-.348864.348863-.348864.914488 0 1.263636l.631818.631818c.348864.348864.914773.348864 1.263636 0L5 6.895455l2.842898 2.842897c.348863.348864.914772.348864 1.263636 0l.631818-.631818c.348864-.348864.348864-.914489 0-1.263636L6.895455 5z"
          />
        </svg>
      </button>
      
      <svg
        class="vs__open-indicator"
        height="10"
        role="presentation"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.211364 7.59931l4.48338-4.867229c.407008-.441854.407008-1.158247 0-1.60046l-.73712-.80023c-.407008-.441854-1.066904-.441854-1.474243 0L7 5.198617 2.51662.33139c-.407008-.441853-1.066904-.441853-1.474243 0l-.737121.80023c-.407008.441854-.407008 1.158248 0 1.600461l4.48338 4.867228L7 10l2.211364-2.40069z"
        />
      </svg>
      
      
      <div
        class="vs__spinner"
        style="display: none;"
      >
        Loading...
      </div>
      
    </div>
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="dropdown"
    persisted="false"
  >
    <ul
      id="vs2__listbox"
      role="listbox"
      style="display: none; visibility: hidden;"
    />
  </transition-stub>
  
  
</div>
`;
